# 3d-printing-planner

./: .env.sample  .gitignore  README.md  agent.py  app.py  llm.py  presets.py  prompts.py  pyproject.toml  shell.py  state.py  tools.py
docker/openscad/: Dockerfile
